--- a/style.css
+++ b/style.css
@@ -1,108 +1,121 @@
-img, .a{
-    display: inline-block;
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 24px 78px 18px 99px;
+  width: 100%;
 }
-.a{
-    padding: 50px;
-    color: #636060;
-    font-family: Helvetica;
-    font-size: 17px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin-top: 0px;
+.nav {
+  display: flex;
+  align-items: center;
 }
-.diva{
-    display: flex;
-    justify-content: flex-end;
+
+nav ul li {
+  display: inline-block;
+  padding-left: 50px;
+  color: #636060;
 }
-.img-text1{
-    color: #FFF;
-    font-family: Helvetica;
-    font-size: 79px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%)
+nav ul li a {
+  color: #636060;
+  font-family: "Roboto", sans-serif;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  cursor: pointer;
+  transition: 0.5s;
 }
-.img-text2{
-    color: #FFF;
-    font-family: Helvetica;
-    font-size: 19px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, 500%)
+.s-1 img {
+  width: 100%;
 }
-.discover{
-    color: #636060;
-font-family: Helvetica;
-font-size: 17px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-padding-bottom: 10px;
+
+.img-text1 {
+  color: #fff;
+  font-family: Helvetica;
+  font-size: 79px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-.hope{
-    color: #636060;
-font-family: Helvetica;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
+.img-text2 {
+  color: #fff;
+  font-family: Helvetica;
+  font-size: 19px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 500%);
 }
-.hot{
-    color: #010101;
-font-family: Helvetica;
-font-size: 28px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-padding-bottom: 40px;
+.discover {
+  color: #636060;
+  font-family: Helvetica;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding-bottom: 10px;
 }
-.div1{
-    margin-top: 80px;
-    width: 300px;
-    display: inline-block;
+.hope {
+  color: #636060;
+  font-family: Helvetica;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
-.div2{
-    width: 700px;
-    display: inline-flex;
-    align-items: top;
-    flex-wrap: wrap;
-    padding: 23px;
+.hot {
+  color: #010101;
+  font-family: Helvetica;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding-bottom: 40px;
 }
-.div3{
-    display: flex;
-    justify-content: flex end;
+.div1 {
+  margin-top: 80px;
+  width: 300px;
+  display: inline-block;
 }
-.div4{
-    display: flex;
-    justify-content: flex end;
+.div2 {
+  width: 700px;
+  display: inline-flex;
+  align-items: top;
+  flex-wrap: wrap;
+  padding: 23px;
 }
-.smallbox{
-    padding: 33px;
+.div3 {
+  display: flex;
+  justify-content: flex end;
 }
-.didi{
-    color: #343232;
-    font-family: Helvetica;
-    font-size: 19px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    padding-top: 25px;
+.div4 {
+  display: flex;
+  justify-content: flex end;
 }
-.patara{
-    color: #636060;
-    font-family: Helvetica;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    padding-top: 9px;
+.smallbox {
+  padding: 33px;
+}
+.didi {
+  color: #343232;
+  font-family: Helvetica;
+  font-size: 19px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding-top: 25px;
+}
+.patara {
+  color: #636060;
+  font-family: Helvetica;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding-top: 9px;
 }
